--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script type="module">
   import SwaggerUI from 'swagger-ui';
   import 'swagger-ui/dist/swagger-ui.css';
-  import OpenApiSpec from "./api/nimmbus.yaml";
+  import OpenApiSpec from "./api/bmtc.yaml";
 
   SwaggerUI({
     dom_id: '#root',
